Add webstore param